# Cube-OS-file-service

./: Cargo.toml  commands.json  config.toml  config2.toml
src/: lib.rs  main.rs  service.rs
tests/: upload.rs  upload_large.rs
tests/common/: mod.rs
