[package]
name = "file-service"
version = "0.1.0"
authors = ["Ryan Plauche <ryan@kubos.co>"]
edition = "2018"

[dependencies]
failure = "0.1.2"
file-protocol = { path = "../file-protocol" }
# file-protocol = {git = "ssh://git@github.com/Cube-OS/file-protocol.git"}
# kubos-system = { path = "../../system-api" }
kubos-system = {git = "ssh://git@github.com/Cube-OS/system-api.git" }
log = "^0.4.0"
serde = { version = "1.0", features = ["derive"] }
bincode = { git = "ssh://git@github.com/Cube-OS/bincode" }

[dev-dependencies]
blake2-rfc = "0.2.18"
rand = "0.5.5"
tempfile = "3"
